2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-buffer): Make sure that the article
	buffer always points to the right summary buffer.

2012-12-25  John Wiegley  <jwiegley@gmail.com>

	* auth-source.el (auth-source-netrc-parse): Allow using "password" as
	the password (bug#12097).

2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-a): Don't tagify <A> elements that don't have HREFs
	(bug#13263).

	* gnus-salt.el (gnus-highlight-selected-tree): Check whether the Tree
	buffer exists before using it (bug#12475).

	* gnus-agent.el (gnus-agent-fetch-articles): Don't fetch articles from
	offline groups (bug#11937).

	* message.el (message-yank-original): When using customize to set the
	value of `message-cite-style', the variable it set to a symbol that's
	the name of the variable, which must then be dereferenced (bug#12616).

2012-09-13  Wolfgang Jenkner  <wjenkner@inode.at>

	* lisp/gnus-spec.el (gnus-face-face-function): Initialize the value of
	the `face' property with a list whose car is the face specified in the
	format string and whose cdr is (nil).
	* lisp/gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Change
	accordingly.
	(gnus-get-text-property-excluding-characters-with-faces): New function.
	* lisp/gnus-sum.el (gnus-summary-highlight-line):
	* lisp/gnus-salt.el (gnus-tree-highlight-node):
	* lisp/gnus-group.el (gnus-group-highlight-line): Use it.

2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-authenticator): Expand to allow specifying the
	login methods.
	(nnimap-login): Respect the `nnimap-authenticator' variable.

	* gnus-sum.el (gnus-summary-push-marks-to-backend): Push the complete
	mark state when moving articles.  Otherwise unticked articles will get
	their ticks back after moving.

2012-12-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-browse-delete-group): Fix syntax error.

	* message.el (message-ignored-news-headers): Always remove