@@ -1,5 +1,9 @@
 2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-sum.el (gnus-set-global-variables): Don't copy over the summary
+	buffer to the article buffer here, because that clobbers multiple
+	article buffers.
+
 	* gnus-art.el (gnus-article-setup-buffer): Make sure that the article
 	buffer always points to the right summary buffer.
 
